--- a/Peergrade005/Peergrade005/Peergrade005.csproj
+++ b/Peergrade005/Peergrade005/Peergrade005.csproj
@@ -12,6 +12,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="System.Drawing.Common" Version="6.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Resource Include="1a9a5693eca1ee26dfdcd4e96d03a52f.jpg" />
     <Resource Include="pngwing.com (5).png" />
   </ItemGroup>
