--- a/Peergrade005/Peergrade005/Peergrade005.csproj
+++ b/Peergrade005/Peergrade005/Peergrade005.csproj
@@ -7,8 +7,18 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <None Remove="1a9a5693eca1ee26dfdcd4e96d03a52f.jpg" />
-    <None Remove="pngwing.com %285%29.png" />
+    <None Remove="angle.png" />
+    <None Remove="CANTOR-SET.png" />
+    <None Remove="distance.png" />
+    <None Remove="FRACTAL-TREE.png" />
+    <None Remove="Fractal.png" />
+    <None Remove="KOCH-SNOWFLAKE.png" />
+    <None Remove="lenghtsegment.png" />
+    <None Remove="lengthside.png" />
+    <None Remove="recursion.png" />
+    <None Remove="relation.png" />
+    <None Remove="SIERPINSKI-CARPET.png" />
+    <None Remove="SIERPINSKI-TRIANGLE.png" />
   </ItemGroup>
 
   <ItemGroup>
@@ -16,8 +26,18 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Resource Include="1a9a5693eca1ee26dfdcd4e96d03a52f.jpg" />
-    <Resource Include="pngwing.com (5).png" />
+    <Resource Include="angle.png" />
+    <Resource Include="CANTOR-SET.png" />
+    <Resource Include="distance.png" />
+    <Resource Include="FRACTAL-TREE.png" />
+    <Resource Include="Fractal.png" />
+    <Resource Include="KOCH-SNOWFLAKE.png" />
+    <Resource Include="lenghtsegment.png" />
+    <Resource Include="lengthside.png" />
+    <Resource Include="recursion.png" />
+    <Resource Include="relation.png" />
+    <Resource Include="SIERPINSKI-CARPET.png" />
+    <Resource Include="SIERPINSKI-TRIANGLE.png" />
   </ItemGroup>
 
 </Project>
