--- a/CPP_PEERGRADE001/Peergrade001/CMakeLists.txt
+++ b/CPP_PEERGRADE001/Peergrade001/CMakeLists.txt
@@ -4,4 +4,4 @@ project(Peergrade001)
 set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_EXE_LINKER_FLAGS "-static")
 
-add_executable(Peergrade001 main.cpp Functions.h)
+add_executable(Peergrade001 main.cpp)
